force-app/main/default/objects/Universal_App_Progress_Step__mdt/Universal_App_Progress_Step__mdt.object-meta.xml
<CustomObject>
    <label>Universal App Progress Step</label>
    <pluralLabel>Universal App Progress Steps</pluralLabel>
</CustomObject>