force-app/main/default/objects/Universal_App_Progress_Step__mdt/fields/ProgressIndicator__c.field-meta.xml
<CustomField>
    <fullName>ProgressIndicator__c</fullName>
    <label>Progress Indicator</label>
    <referenceTo>Universal_App_Progress_Indicator__mdt</referenceTo>
    <relationshipLabel>Progress Steps</relationshipLabel>
    <relationshipName>Progress_Steps</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>