force-app/main/default/objects/Universal_App_Progress_Step__mdt/fields/Stages__c.field-meta.xml
<CustomField>
    <fullName>Stages__c</fullName>
    <description>Opp Stages that match to this Step</description>
    <inlineHelpText>Comma separated (e.g. stage1, stage2). Opp Stages that match to this Step</inlineHelpText>
    <label>Stages</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>