force-app/main/default/objects/Universal_App_Progress_Step__mdt/fields/StepNum__c.field-meta.xml
<CustomField>
    <fullName>StepNum__c</fullName>
    <label>Step #</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>